--- a/portfolio-clustering-deschutes.html
+++ b/portfolio-clustering-deschutes.html
@@ -7649,9 +7649,9 @@ a.anchor-link {
 </div>
 <div class="jp-OutputArea-child">
 <div class="jp-OutputPrompt jp-OutputArea-prompt"></div>
-<div class="jp-RenderedJavaScript jp-OutputArea-output" data-mime-type="application/javascript" id="a6bddec0-07dd-4614-a808-ede1eb8e4e1a" tabindex="0">
+<div class="jp-RenderedJavaScript jp-OutputArea-output" data-mime-type="application/javascript" id="56b9d1ef-eee4-4cc9-b032-f13ebb418bb6" tabindex="0">
 <script type="text/javascript">
-var element = document.getElementById('a6bddec0-07dd-4614-a808-ede1eb8e4e1a');
+var element = document.getElementById('56b9d1ef-eee4-4cc9-b032-f13ebb418bb6');
 (function(root) {
   function now() {
     return new Date();
@@ -7903,9 +7903,9 @@ function(Bokeh) {} // ensure no trailing comma for IE
 </div>
 <div class="jp-OutputArea-child">
 <div class="jp-OutputPrompt jp-OutputArea-prompt"></div>
-<div class="jp-RenderedJavaScript jp-OutputArea-output" data-mime-type="application/javascript" id="2ce3e72a-aee1-4947-8c32-c24ea927d6d5" tabindex="0">
+<div class="jp-RenderedJavaScript jp-OutputArea-output" data-mime-type="application/javascript" id="125f9ee9-445a-4317-aa69-839d41fa1451" tabindex="0">
 <script type="text/javascript">
-var element = document.getElementById('2ce3e72a-aee1-4947-8c32-c24ea927d6d5');
+var element = document.getElementById('125f9ee9-445a-4317-aa69-839d41fa1451');
 
 if ((window.PyViz === undefined) || (window.PyViz instanceof HTMLElement)) {
   window.PyViz = {comms: {}, comm_status:{}, kernels:{}, receivers: {}, plot_index: []}
@@ -8261,9 +8261,9 @@ if (window.Jupyter !== undefined) {
 </div>
 <div class="jp-OutputArea-child">
 <div class="jp-OutputPrompt jp-OutputArea-prompt"></div>
-<div class="jp-RenderedJavaScript jp-OutputArea-output" data-mime-type="application/javascript" id="7618d482-80d3-4f58-a0cc-d34ded472b73" tabindex="0">
+<div class="jp-RenderedJavaScript jp-OutputArea-output" data-mime-type="application/javascript" id="78573e1c-cf49-421f-9ea4-6d828ee4285b" tabindex="0">
 <script type="text/javascript">
-var element = document.getElementById('7618d482-80d3-4f58-a0cc-d34ded472b73');
+var element = document.getElementById('78573e1c-cf49-421f-9ea4-6d828ee4285b');
 (function(root) {
   function now() {
     return new Date();
@@ -8515,9 +8515,9 @@ function(Bokeh) {} // ensure no trailing comma for IE
 </div>
 <div class="jp-OutputArea-child">
 <div class="jp-OutputPrompt jp-OutputArea-prompt"></div>
-<div class="jp-RenderedJavaScript jp-OutputArea-output" data-mime-type="application/javascript" id="0f706d24-e703-458c-82b9-be01e8d9db50" tabindex="0">
+<div class="jp-RenderedJavaScript jp-OutputArea-output" data-mime-type="application/javascript" id="0faccebe-408b-4675-90f2-db12183cd7b9" tabindex="0">
 <script type="text/javascript">
-var element = document.getElementById('0f706d24-e703-458c-82b9-be01e8d9db50');
+var element = document.getElementById('0faccebe-408b-4675-90f2-db12183cd7b9');
 
 if ((window.PyViz === undefined) || (window.PyViz instanceof HTMLElement)) {
   window.PyViz = {comms: {}, comm_status:{}, kernels:{}, receivers: {}, plot_index: []}
@@ -14106,7 +14106,7 @@ Coordinates:
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h3 id="K-Means-Land-Cover-Classification-in-Deschutes-River---Capitol-Lake-Watershed-in-Summer-2024"><strong>K-Means Land Cover Classification in Deschutes River - Capitol Lake Watershed in Summer 2024</strong><a class="anchor-link" href="#K-Means-Land-Cover-Classification-in-Deschutes-River---Capitol-Lake-Watershed-in-Summer-2024">¶</a></h3><p>The comparison between the true color RGB image (left) and the k-means spectral reflectance clusters (right) used unsupervised machine learning to explore land-cover classification in the Deschutes River-Capitol Lake watershed. The Deschutes River watershed, and particularly the subwatershed (HUC12 171100160202) that drains into Capitol Lake, is projected to experience significant population growth over the next 20 years. The watershed is already vulnerable to pollution and experiences water quality issues in parameters such as dissolved oxygen, pH, water temperature, fecal coliform, and sediment. Understanding land covers in the area is important for making informed decisions about land use to support watershed management and sustainable growth. The above k-means analysis clustered pixels with similar reflectance values to explore the land cover classifications.</p>
-<p>In this geographic region, land covers could potentially include water, wetlands, urban / impervious, agriculture / vegetation, bare soil, and dense forest. While we cannot know the different land covers with certainty, as k-means does not label clusters, the clusters observed in the the k-means analysis do support these classifications. When compared with true color RGB, it does appear to classify different land covers based on their spectral bands accurately. The clusters in the k-means image, cluster 3 is mostly likely open water, cluster 4 could be urban development and impervious surfaces such as roads, cluster 5 aligns with dense forested areas, cluster 2 appears as mixed use vegetation such as agriculture or greenspace, and cluster 1 as additional development. This data analysis was exploratory to look at the surface reflectance data to observe land cover patterns. Land cover classification from satellite imagery is helpful for informing decisions on natural resources management. Future analyses could add additional environmental datasets to refine the clustering, or track temporal changes in clustering over time.</p>
+<p>In this geographic area, land covers could potentially include water, wetlands, urban / impervious, agriculture / vegetation, bare soil, and dense forest. While we cannot know the different land covers with certainty, as k-means does not label clusters, the clusters observed in the the k-means analysis do support these classifications. When compared with true color RGB, it does appear to classify different land covers based on their spectral bands accurately. The clusters in the k-means image, cluster 3 is mostly likely open water, cluster 4 could be urban development and impervious surfaces such as roads, cluster 5 aligns with dense forested areas, cluster 2 appears as mixed use vegetation such as agriculture or greenspace, and cluster 1 as additional development. This data analysis was exploratory to look at the surface reflectance data to observe land cover patterns. Land cover classification from satellite imagery is helpful for informing decisions on natural resources management. Future analyses could add additional environmental datasets to refine the clustering, or track temporal changes in clustering over time.</p>
 </div>
 </div>
 </div>
